fixed spacing of forecast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,7 @@ input {
     color: white;
     background-color:  rgb(36, 45, 57);
 }
+
+#searchHistory {
+    list-style-type: none;
+}
